BTWCT-1548: Fixed mobile overflow

--- a/waters-aem-frontend/src/styles/footer.scss
+++ b/waters-aem-frontend/src/styles/footer.scss
@@ -521,7 +521,8 @@
       position: absolute;
       top: 100%;
       left: 0;
-      padding-top: $space-xxl;
+      margin-top: 0;
+      padding-top: $space-l;
    }
 
    &-sICP {
